--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,6 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=61912FB847E2A8E7515622A9C43B76B7
+
+[/Script/AIModule.AISense_Sight]
+bAutoRegisterAllPawnAsSources=false
