--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -60,6 +60,7 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.AntiAliasingMethod=1
 r.DefaultFeature.MotionBlur=False
 r.CustomDepth=3
+r.CustomDepthTemporalAAJitter=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
